# bottle_sort

./: .gitignore  README.md  pyproject.toml  reset.py  test.py  test_wait.py  torch_test.py  yolo_test.py  yolo_test_d.py
bottle_sort/: depth.py  detector.py  detector_multithread.py  detector_multithread_log.py  example.py  example_multithread.py  image_taker.py
bottle_sort/less_simple/: detector.py  dobot_utils.py  get_color.py  sort.py
bottle_sort/simple/: sort_simple.py  util.py
bottle_sort/yolov5_model/bottles/: events.out.tfevents.1673377776.ai-in-robotics.32713.0  opt.yaml  results.csv
bottle_sort/yolov5_model/bottles_three_classes/: events.out.tfevents.1673387765.ai-in-robotics.37080.0  opt.yaml  results.csv
bottle_sort/yolov5_model/last_klopfer/: events.out.tfevents.1672948141.ai-in-robotics.4221.0  opt.yaml  results.csv
bottle_sort/yolov5_model/lego_random/: events.out.tfevents.1672260291.ai-in-robotics.13366.0  opt.yaml  results.csv
bottle_sort/yolov5_model/other_klopfer/: events.out.tfevents.1672907830.ai-in-robotics.2880.0  opt.yaml  results.csv
bottle_sort/yolov5_model/painted_klopfer/: events.out.tfevents.1672866486.ai-in-robotics.673.0  opt.yaml  results.csv
bottle_sort/yolov5_model/roboflow_s_lego/: events.out.tfevents.1672255752.ai-in-robotics.12497.0  opt.yaml  results.csv
bottle_sort/yolov5_model/yolov5s_klopfer3/: events.out.tfevents.1670571179.ai-in-robotics.20182.0  opt.yaml
yolov5_model/yolov5n_klopfer/: events.out.tfevents.1670916998.ai-in-robotics.1660.0  opt.yaml  results.csv
yolov5_model/yolov5s_klopfer3/: results.csv
(+5 files in other folders)
