[tool.poetry]
name = "dobot-test"
version = "0.1.0"
description = ""
authors = ["Andreas Riegg <andreas.riegg@gmx.de>"]
readme = "README.md"
packages = [{include = "dobot_test"}]

[tool.poetry.dependencies]
python = "^3.10"
dobot-python-api = {git = "git@github.com:andy1631/dobot-python-api.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
